--- a/3.0/contact.html
+++ b/3.0/contact.html
@@ -89,7 +89,7 @@
     </div>
 
     <nav>
-        <a href="">Home</a>
+        <a href="./">Home</a>
         <a href="services">Services</a>
         <a href="portfolio">Portfolio</a>
         <a href="about">About</a>
