--- a/3.0/portfolio.html
+++ b/3.0/portfolio.html
@@ -89,7 +89,7 @@
     </div>
 
     <nav>
-        <a href="">Home</a>
+        <a href="./">Home</a>
         <a href="services">Services</a>
         <a href="portfolio" class="active">Portfolio</a>
         <a href="about">About</a>
