--- a/3.0/work/hotchoco.html
+++ b/3.0/work/hotchoco.html
@@ -76,7 +76,7 @@
     </div>
 
     <nav>
-        <a href="">Home</a>
+        <a href="./">Home</a>
         <a href="services">Services</a>
         <a href="portfolio" class="active">Portfolio</a>
         <a href="about">About</a>
