--- a/3.0/work/inner-animal.html
+++ b/3.0/work/inner-animal.html
@@ -77,7 +77,7 @@
     </div>
 
     <nav>
-        <a href="">Home</a>
+        <a href="./">Home</a>
         <a href="services">Services</a>
         <a href="portfolio" class="active">Portfolio</a>
         <a href="about">About</a>
