--- a/1.0/it/progetti.html
+++ b/1.0/it/progetti.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ashley Howard | Progetti</title>
     <meta name="theme-color" content="#6e8a9f">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Qwigley">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
 <meta name="description" content="Ciao! sono Ashley. Lavoro come web developer front-end a Trieste. Insegno inglese anche." />
 
 <meta name="keywords" content="front, end, web, developer, development, designer, designing, nativo, inglese, tutor, tutoring, insegnante, insegnamento" />
@@ -41,16 +41,16 @@
 <meta property="og:image" content="https://ashley.how/assets/img/headshot-firenze.jpg" />
 <meta property="og:description" content="Ciao! sono Ashley. Lavoro come web developer front-end a Trieste. Insegno inglese anche." />
 <meta property="og:site_name" content="Ashley Howard" /><!-- Shortcut icons -->
-<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
+<link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+<link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="57x57" href="./apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="./apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="76x76" href="./apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="./apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152x152.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png" />
 
 <script>
 (function(i,s,o,g,r,a,m){
@@ -91,7 +91,7 @@ ga('send', 'pageview');
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="../a-kin" target="_blank"><img class="card-img-top scale-on-hover" src="/assets/img/drew.jpg" alt="a preview of Akin's website"></a>
+                        <div class="card border-0"><a href="../a-kin" target="_blank"><img class="card-img-top scale-on-hover" src="./assets/img/drew.jpg" alt="a preview of Akin's website"></a>
                             <div class="card-body">
                                 <h6><a href="../a-kin" target="_blank">A-KIN<br></a></h6>
                                 <p class="text-center text-muted card-text">Un musicista sperimentale elettronico che crea dei mix che usano una varietà di argomenti e idee diversi.<br></p>
@@ -99,7 +99,7 @@ ga('send', 'pageview');
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="../ribbit-app" target="_blank"><img class="card-img-top scale-on-hover" src="/assets/img/Untitled-3.jpg" alt="screenshot of a camera website"></a>
+                        <div class="card border-0"><a href="../ribbit-app" target="_blank"><img class="card-img-top scale-on-hover" src="./assets/img/Untitled-3.jpg" alt="screenshot of a camera website"></a>
                             <div class="card-body">
                                 <h6><a href="../ribbit-app" target="_blank">Ribbit.</a></h6>
                                 <p class="text-center text-muted card-text">A to-do list which prioritises your most difficult tasks. Based on Mark Twain's quote: "If it’s your job to eat a frog, it’s best to do it first thing in the morning.&nbsp;And if it’s your job to eat two frogs, it’s best
@@ -108,7 +108,7 @@ ga('send', 'pageview');
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://www.noteconvert.com/" target="_blank"><img class="card-img-top scale-on-hover" src="/assets/img/noteconvert.jpg" alt="screenshot of a fictional academy"></a>
+                        <div class="card border-0"><a href="https://www.noteconvert.com/" target="_blank"><img class="card-img-top scale-on-hover" src="./assets/img/noteconvert.jpg" alt="screenshot of a fictional academy"></a>
                             <div class="card-body">
                                 <h6><a href="https://www.noteconvert.com/">NoteConvert</a></h6>
                                 <p class="text-center text-muted card-text">Convertire le note musicali da C D E F G B A a Do Re Mi Fa Sol La Si.</p>
@@ -116,7 +116,7 @@ ga('send', 'pageview');
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="../dogcalc" target="_blank"><img class="card-img-top scale-on-hover" src="/assets/img/dog-web.jpg" alt="screenshot of a dog website"></a>
+                        <div class="card border-0"><a href="../dogcalc" target="_blank"><img class="card-img-top scale-on-hover" src="./assets/img/dog-web.jpg" alt="screenshot of a dog website"></a>
                             <div class="card-body">
                                 <h6><a href="../dogcalc" target="_blank">Dog Central</a></h6>
                                 <p class="text-center text-muted card-text">With this website, you can find out your dog's human age by selecting its size and age.<br></p>
@@ -124,7 +124,7 @@ ga('send', 'pageview');
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="../english" target="_blank"><img class="card-img-top scale-on-hover" src="/assets/img/school-web.jpg" alt="screenshot of a fictional english school"></a>
+                        <div class="card border-0"><a href="../english" target="_blank"><img class="card-img-top scale-on-hover" src="./assets/img/school-web.jpg" alt="screenshot of a fictional english school"></a>
                             <div class="card-body">
                                 <h6><a href="../english" target="_blank">Scuola di inglese</a></h6>
                                 <p class="text-center text-muted card-text">Questo progetto è&nbsp;basato su una scuola finta.&nbsp;È&nbsp;costruito con Wordpress e usa Bootstrap 4.1.&nbsp;Mostra le traduzioni "one click" e&nbsp;materiali privati per gli studenti.<br></p>
@@ -132,7 +132,7 @@ ga('send', 'pageview');
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="https://github.ashley.how" target="_blank"><img class="card-img-top scale-on-hover" src="/assets/img/github-landscape.png" alt="github logo"></a>
+                        <div class="card border-0"><a href="https://github.ashley.how" target="_blank"><img class="card-img-top scale-on-hover" src="./assets/img/github-landscape.png" alt="github logo"></a>
                             <div class="card-body">
                                 <h6><a href="https://github.ashley.how">Più Progetti</a></h6>
                                 <p class="text-center text-muted card-text">Puoi vedere più progetti sul mio Github!</p>
@@ -150,10 +150,10 @@ ga('send', 'pageview');
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Servizi</h3>
                     <ul>
-                        <li><a href="/it/pacchetti/tutoring/lezioni">Lezioni di Inglese </a></li>
-                        <li><a href="/it/pacchetti/tutoring/correzioni">Correzioni</a></li>
+                        <li><a href="./it/pacchetti/tutoring/lezioni">Lezioni di Inglese </a></li>
+                        <li><a href="./it/pacchetti/tutoring/correzioni">Correzioni</a></li>
                         <li>
-                        <a href="/it/policy">Privacy Policy</a></li>
+                        <a href="./it/policy">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
@@ -183,7 +183,7 @@ ga('send', 'pageview');
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="/assets/js/script.min.js"></script>
+    <script src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
