--- a/1.0/it/home.html
+++ b/1.0/it/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ashley Howard | Home</title>
     <meta name="theme-color" content="#6e8a9f">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Qwigley">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
 <meta name="description" content="Ciao! sono Ashley. Lavoro come web developer front-end a Trieste. Insegno inglese anche." />
 
 <meta name="keywords" content="front, end, web, developer, development, designer, designing, nativo, inglese, tutor, tutoring, insegnante, insegnamento" />
@@ -41,16 +41,16 @@
 <meta property="og:image" content="https://ashley.how/assets/img/headshot-firenze.jpg" />
 <meta property="og:description" content="Ciao! sono Ashley. Lavoro come web developer front-end a Trieste. Insegno inglese anche." />
 <meta property="og:site_name" content="Ashley Howard" /><!-- Shortcut icons -->
-<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
+<link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+<link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="57x57" href="./apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="./apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="76x76" href="./apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="./apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152x152.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png" />
 
 <script>
 (function(i,s,o,g,r,a,m){
@@ -87,7 +87,7 @@ ga('send', 'pageview');
         <div class="intro"></div>
         <div class="row people">
             <div class="col-md-6 col-lg-4 item">
-                <div class="box"><img src="/assets/img/headshot-firenze.jpg" class="rounded-circle" style="width:150px;height:160px;" />
+                <div class="box"><img src="./assets/img/headshot-firenze.jpg" class="rounded-circle" style="width:150px;height:160px;" />
                     <h3 class="name">Ashley Howard</h3>
                     <div role="group" class="btn-group" style="padding-bottom:5px;"><a class="btn btn-primary" role="button" href="developer" style="font-size:15px;">Developer</a><a class="btn btn-primary" role="button" href="tutor" style="font-size:15px;">Tutor</a></div>
                     <p class="title">SU DI ME</p>
@@ -99,7 +99,7 @@ ga('send', 'pageview');
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 
-        <a class="dropdown-item" href="/">English</a>
+        <a class="dropdown-item" href="./">English</a>
         <a class="dropdown-item" href="home">Italiano</a>
         </div>
 </div>
@@ -114,7 +114,7 @@ ga('send', 'pageview');
         <div class="intro"></div>
         <div class="row people">
             <div class="col-md-6 col-lg-4 item">
-                <div class="box" style="padding-bottom:0px;"><img src="/assets/img/headshot-firenze.jpg" class="rounded-circle" style="width:150px;height:160px;" alt="portrait shot with florence behind" /></div>
+                <div class="box" style="padding-bottom:0px;"><img src="./assets/img/headshot-firenze.jpg" class="rounded-circle" style="width:150px;height:160px;" alt="portrait shot with florence behind" /></div>
             </div>
         </div>
     </div>
@@ -137,10 +137,10 @@ ga('send', 'pageview');
   </button>
   <div class="dropdown-menu">
       <a class="dropdown-item" href="tutor">Profilo Tutor</a>
-      <a class="dropdown-item" href="/it/pacchetti/tutoring/lezioni">Lezioni di Inglese </a>
-      <a class="dropdown-item" href="/it/pacchetti/tutoring/correzioni">Correzioni</a>
+      <a class="dropdown-item" href="./it/pacchetti/tutoring/lezioni">Lezioni di Inglese </a>
+      <a class="dropdown-item" href="./it/pacchetti/tutoring/correzioni">Correzioni</a>
       <a class="dropdown-item" href="contatti">Contattami</a>
-      <a class="dropdown-item" href="/">Read in English</a>
+      <a class="dropdown-item" href="./">Read in English</a>
   </div>
 </div>
             
@@ -202,9 +202,9 @@ ga('send', 'pageview');
                 <div class="col-md-12 col-lg-5">
                     <div class="portfolio-laptop-mockup"><div data-ride="carousel" class="carousel slide" id="carousel-1">
     <div role="listbox" class="carousel-inner">
-        <div class="carousel-item web active"><a href="../a-kin" target="_blank"><img src="/assets/img/laptop-drew.png" alt="a preview of Akin's website" class="w-100 d-block" /></a></div>
-        <div class="carousel-item web"><a href="../a-kin" target="_blank"><img src="/assets/img/laptop-akin.png" alt="a preview of Akin's website" class="w-100 d-block" /></a></div>
-        <div class="carousel-item mobile"><a href="../a-kin" target="_blank"><img src="/assets/img/mobile.png" alt="a preview of Akin's mobile website" /></a></div>
+        <div class="carousel-item web active"><a href="../a-kin" target="_blank"><img src="./assets/img/laptop-drew.png" alt="a preview of Akin's website" class="w-100 d-block" /></a></div>
+        <div class="carousel-item web"><a href="../a-kin" target="_blank"><img src="./assets/img/laptop-akin.png" alt="a preview of Akin's website" class="w-100 d-block" /></a></div>
+        <div class="carousel-item mobile"><a href="../a-kin" target="_blank"><img src="./assets/img/mobile.png" alt="a preview of Akin's mobile website" /></a></div>
     </div>
     <div><a href="#carousel-1" role="button" data-slide="prev" class="carousel-control-prev"><span aria-hidden="true" class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a href="#carousel-1" role="button" data-slide="next" class="carousel-control-next"><span aria-hidden="true" class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
     <ol
@@ -225,10 +225,10 @@ ga('send', 'pageview');
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Servizi</h3>
                     <ul>
-                        <li><a href="/it/pacchetti/tutoring/lezioni">Lezioni di Inglese </a></li>
-                        <li><a href="/it/pacchetti/tutoring/correzioni">Correzioni</a></li>
+                        <li><a href="./it/pacchetti/tutoring/lezioni">Lezioni di Inglese </a></li>
+                        <li><a href="./it/pacchetti/tutoring/correzioni">Correzioni</a></li>
                     <li>
-                        <a href="/it/policy">Privacy Policy</a></li>
+                        <a href="./it/policy">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
@@ -242,7 +242,7 @@ ga('send', 'pageview');
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Lingua</h3>
                     <ul>
-                        <li><a href="/">English</a></li>
+                        <li><a href="./">English</a></li>
                         <li><a href="home">Italiano</a></li>
                     </ul>
                 </div>
@@ -258,7 +258,7 @@ ga('send', 'pageview');
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="/assets/js/script.min.js"></script>
+    <script src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
