--- a/1.0/packages/form-submitted.html
+++ b/1.0/packages/form-submitted.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ashley Howard | Form Submitted</title>
     <meta name="theme-color" content="#212529">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,18 +15,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Qwigley">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
 <!-- Shortcut icons -->
-<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
+<link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+<link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="57x57" href="./apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="./apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="76x76" href="./apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="./apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152x152.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png" />
 
 <script>
 (function(i,s,o,g,r,a,m){
@@ -50,10 +50,10 @@ ga('send', 'pageview');
             <div
                 class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav links">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/packages/tutoring/lessons">Lessons</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/packages/tutoring/corrections">Corrections</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/tutor">About me</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/">Back to site</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="./packages/tutoring/lessons">Lessons</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="./packages/tutoring/corrections">Corrections</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="./tutor">About me</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="./">Back to site</a></li>
                 </ul>
         </div>
         </div>
@@ -64,7 +64,7 @@ ga('send', 'pageview');
                 <h2 class="text-center" id="received-text" style="color:#ffffff;">Your message was received!</h2>
                 <p class="text-center" style="color:rgb(255,255,255);">I will get back to you as soon as possible.</p>
             </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" style="background-color:rgb(52,52,52);" href="tutoring/lessons">Go back</a><a class="btn btn-light" role="button" href="/">Go home</a></div>
+            <div class="buttons"><a class="btn btn-primary" role="button" style="background-color:rgb(52,52,52);" href="tutoring/lessons">Go back</a><a class="btn btn-light" role="button" href="./">Go home</a></div>
         </div>
     </div><div class="footer-clean pricing" style="padding-top:0px;margin-top:0px;">
     <footer>
@@ -73,9 +73,9 @@ ga('send', 'pageview');
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="/packages/tutoring/lessons">English Lessons</a></li>
-                        <li><a href="/packages/tutoring/corrections">Essay Corrections</a></li>
-                        <li><a href="/policy">Privacy Policy</a></li>
+                        <li><a href="./packages/tutoring/lessons">English Lessons</a></li>
+                        <li><a href="./packages/tutoring/corrections">Essay Corrections</a></li>
+                        <li><a href="./policy">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
@@ -89,8 +89,8 @@ ga('send', 'pageview');
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Language</h3>
                     <ul>
-                        <li><a href="/packages/form-submitted">English</a></li>
-                        <li><a href="/it/pacchetti/modulo-inviato">Italiano</a></li>
+                        <li><a href="./packages/form-submitted">English</a></li>
+                        <li><a href="./it/pacchetti/modulo-inviato">Italiano</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 item social">
@@ -105,7 +105,7 @@ ga('send', 'pageview');
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="/assets/js/script.min.js"></script>
+    <script src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
