--- a/1.0/tutor.html
+++ b/1.0/tutor.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ashley Howard | Tutoring</title>
     <meta name="theme-color" content="#6e8a9f">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Qwigley">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
 <meta name="description" content="Hi! I'm Ashley. I work as a front-end web developer in Trieste, Italy. I also teach English." />
 
 <meta name="keywords" content="front, end, web, developer, development, designer, designing, native, english, tutor, tutoring, teacher, teaching" />
@@ -40,16 +40,16 @@
 <meta property="og:image" content="https://ashley.how/assets/img/headshot-firenze.jpg" />
 <meta property="og:description" content="Hi! I'm Ashley. I work as a front-end web developer in Trieste, Italy. I also teach English." />
 <meta property="og:site_name" content="Ashley Howard" /><!-- Shortcut icons -->
-<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
+<link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+<link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="57x57" href="./apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="./apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="76x76" href="./apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="./apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152x152.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png" />
 
 <script>
 (function(i,s,o,g,r,a,m){
@@ -69,7 +69,7 @@ ga('send', 'pageview');
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="height:66px;">
-        <div class="container"><a class="navbar-brand logo" style="font-family:Qwigley, cursive;font-size:33px;color:rgb(255,255,255);" href="/">Ashley Howard</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" style="font-family:Qwigley, cursive;font-size:33px;color:rgb(255,255,255);" href="./">Ashley Howard</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navbarNav" style="font-size:32px;margin-top:5px;">
                 <ul class="nav navbar-nav ml-auto">
@@ -87,7 +87,7 @@ ga('send', 'pageview');
             <div class="intro"></div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" style="width:150px;height:160px;" src="/assets/img/headshot-firenze.jpg" alt="portrait shot with florence behind">
+                    <div class="box"><img class="rounded-circle" style="width:150px;height:160px;" src="./assets/img/headshot-firenze.jpg" alt="portrait shot with florence behind">
                         <h3 class="name">Ashley Howard</h3>
                         <div class="btn-group" role="group" style="padding-bottom:5px;"><a class="btn btn-primary" role="button" style="font-size:15px;" href="developer">Developer</a><a class="btn btn-primary active" role="button" style="font-size:15px;" href="tutor">Tutor</a></div>
                         <p class="title">ENGLISH TUTOR</p><p class="description">
@@ -103,8 +103,8 @@ ga('send', 'pageview');
    <i class="fas fa-circle"></i> available
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-     <a class="dropdown-item" href="/packages/tutoring/lessons">English Lessons</a>
-      <a class="dropdown-item" href="/packages/tutoring/corrections">Essay Corrections</a>
+     <a class="dropdown-item" href="./packages/tutoring/lessons">English Lessons</a>
+      <a class="dropdown-item" href="./packages/tutoring/corrections">Essay Corrections</a>
     <a class="dropdown-item" href="https://superprof.ashley.how" target="_blank">Superprof</a>
     <a class="dropdown-item" href="https://italki.ashley.how" target="_blank">Italki</a>    
     <a class="dropdown-item" href="contact">Contact me</a>
@@ -233,9 +233,9 @@ ga('send', 'pageview');
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="/packages/tutoring/lessons">English Lessons</a></li>
-                        <li><a href="/packages/tutoring/corrections">Essay Corrections</a></li>
-                        <li><a href="/policy">Privacy Policy</a></li>
+                        <li><a href="./packages/tutoring/lessons">English Lessons</a></li>
+                        <li><a href="./packages/tutoring/corrections">Essay Corrections</a></li>
+                        <li><a href="./policy">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
@@ -265,7 +265,7 @@ ga('send', 'pageview');
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="/assets/js/script.min.js"></script>
+    <script src="./assets/js/script.min.js"></script>
 </body>
 
 </html>
